fix the spacing on the buttons

--- a/public/entries/style/view-entries.css
+++ b/public/entries/style/view-entries.css
@@ -25,3 +25,7 @@
 #entryTableBody button {
   min-width : 0px;
 }
+
+#entryTableBody .entryTableButton {
+  padding-right : 0px;
+}
